[package]
name = "greengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

members = [
	"crates/*"
]

[dependencies]
simple_logger = {version = "4.1.0", features = ["colors", "timestamps"]}
greengine_entry = {path = "crates/greengine_entry", version = "0.1.0"}